# twsfw

./: .coveragerc  .gitattributes  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_docs.yml  deploy_docs.yml  get_coverage.yml  pre_commit.yml  run_tests.yml
docs/: conf.py  index.rst
examples/: twsfw_agent.h
tests/: conftest.py  engine_test.py  game_test.py  import_test.py  physx_version_test.py
twsfw/: __init__.py  __main__.py  _version.py  game.py  physx.py  server.py
twsfwphysx/: binding.c  binding.pyx
