[metadata]
description_file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = twsfw/_version.py
versionfile_build = twsfw/_version.py
tag_prefix = v
parentdir_prefix = twsfw-

[tool:pytest]
testpaths =
    tests
filterwarnings =
  error
  # ignored by default
  ignore::ImportWarning
  ignore::DeprecationWarning
  ignore::PendingDeprecationWarning
  # raised by Cython, usually harmless
  ignore:numpy.dtype size changed:RuntimeWarning
  ignore:numpy.ufunc size changed:RuntimeWarning
  # sometimes, dependencies leak resources
  ignore:.*socket\.socket.*:pytest.PytestUnraisableExceptionWarning
